<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.blossomishymae</groupId>
    <artifactId>smol-image</artifactId>
    <version>1.1.0</version>
    <packaging>jar</packaging>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.3.0</version>
                <configuration>
                    <name>smol-image</name>
                    <appVersion>${project.version}</appVersion>
                    <runtimeImage>${java.home}</runtimeImage>
                    <type>APP_IMAGE</type>
                    <input>build</input>
                    <icon>icon.png</icon>
                    <mainClass>io.github.blossomishymae.Main</mainClass>
                    <mainJar>${project.artifactId}-${project.version}-jar-with-dependencies.jar</mainJar>
                    <destination>dist</destination>
                    <javaOptions>
                        <option>--enable-preview</option>
                        <option>-Dfile.encoding=UTF-8</option>
                    </javaOptions>
                </configuration>

                <executions>
                    <execution>
                        <id>win</id>
                        <configuration>
                            <icon>icon.png</icon>
                            <winMenu>true</winMenu>
                            <winShortcut>true</winShortcut>
                            <winDirChooser>true</winDirChooser>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>build</outputDirectory>
                            <archive>
                                <manifest>
                                    <mainClass>
                                        io.github.blossomishymae.Main
                                    </mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.pushing-pixels</groupId>
            <artifactId>radiance-theming</artifactId>
            <version>6.5.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-model -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.8.7</version>
        </dependency>
        <dependency>
            <groupId>com.github.blossomishymae</groupId>
            <artifactId>mvvmpastel</artifactId>
            <version>v0.3.0-SNAPSHOT</version>
        </dependency>
    </dependencies>

</project>